Fixed highlight color on mobile platforms

--- a/src/components/app/views/filters/filters.scss
+++ b/src/components/app/views/filters/filters.scss
@@ -23,6 +23,11 @@
         font-size: 0.6em;
         line-height: 26px;
 
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
         user-select: none;
         cursor: pointer;
 
@@ -108,6 +113,11 @@
     }
 
     .sleep-container {
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
         user-select: none;
 
         & input {
